Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130873

WIndows/Windows11 Style: Designer signal slot editor item view drawing artifacts

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.8.2, 6.9.0 FF
    • 6.8.0
    • Tools: Designer
    • None
    • Windows
    • 22b21c9b0 (dev), 58dc9e6b1 (6.8)

      Good morning,
      I report a problem with the designer in the following case.
      1) I open the configure connection window;
      2) I press edit to create a new slot;
      3) the selected text overlaps making it almost impossible to understand what is written;
      4) pressing enter does not accept confirmation of the changes. The Name remains the default one.

      I attach an image.

        1. Screenshot 2024-11-05 081859.png
          40 kB
          Dario Baffioni
        2. qtbug130873.zip
          2 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-130873
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            dario_ Dario Baffioni
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes