Qt Designer/Windows 11 style: Fix editing signals/slots

Port from QItemDelegate, which has issues, to QStyledItemDelegate.

Fixes: QTBUG-130873
Change-Id: I351574a7efae537c51f023df80c6d161d5ec570f
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>
(cherry picked from commit 22b21c9b0df268e388109c8143b306e29f8044be)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>